--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>grad - Cosine Gradient in Multiple Color Spaces</title>
-  </head>
+  <link href="/grad/main-c2be553ace759b4024a9.css" rel="stylesheet"></head>
 
   <body>
-  </body>
+  <script type="text/javascript" src="/grad/main-c2be553ace759b4024a9.js"></script></body>
 </html>
